Updated ContactUs.html and DriverInformationForm.pdf

--- a/src/ContactUs.html
+++ b/src/ContactUs.html
@@ -211,6 +211,13 @@
               <td><a href="mailto:island.oasis@shaw.ca">island.oasis@shaw.ca</a></td>
             </tr>
             <tr>
+              <td>High School Class Liason</td>
+              <td>Tracy Barnes</td>
+              <td>#208</td>
+              <td>250-812-6201</td>
+              <td><a href="mailto:island.oasis@shaw.ca">island.oasis@shaw.ca</a></td>
+            </tr>
+            <tr>
               <th>Race Day Volunteers:</th>
               <th>&nbsp;</th>
               <th>&nbsp;</th>
@@ -239,35 +246,21 @@
               <td><a href="mailto:dgreen8@telus.net">dgreen8@telus.net</a></td>
             </tr>
             <tr>
-              <td>Starter</td>
-              <td>Luc Rivest</td>
-              <td>&nbsp;</td>
-              <td>250-475-2120</td>
-              <td><a href="mailto:luc_r64@hotmail.com">luc_r64@hotmail.com</a></td>
-            </tr>
-            <tr class="VolunteerNeeded">
-              <td>Staging Lanes</td>
-              <td>Volunteer Needed</td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-            </tr>
-            <tr>
-              <td>Back Wall Eliminations</td>
-              <td>Sean Hutton</td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-            </tr>
-            <tr>
-              <td>Back Printer</td>
-              <td>Beth Barker</td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
+              <td>Tower/Race Manager</td>
+              <td>Tracy Barnes</td>
+              <td>#208</td>
+              <td>250-812-6201</td>
+              <td><a href="mailto:island.oasis@shaw.ca">island.oasis@shaw.ca</a></td>
             </tr>
             <tr>
               <td>Tower Computers</td>
+              <td>Beth Hutton</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+            </tr>
+            <tr>
+              <td>&nbsp;</td>
               <td>Kole Barnes</td>
               <td>#18</td>
               <td>250-812-6201</td>
@@ -279,6 +272,34 @@
               <td>#8</td>
               <td>250-812-6201</td>
               <td><a href="mailto:island.oasis@shaw.ca">island.oasis@shaw.ca</a></td>
+            </tr>
+            <tr>
+              <td>Starter</td>
+              <td>Luc Rivest</td>
+              <td>&nbsp;</td>
+              <td>250-475-2120</td>
+              <td><a href="mailto:luc_r64@hotmail.com">luc_r64@hotmail.com</a></td>
+            </tr>
+            <tr> <!-- class="VolunteerNeeded -->
+              <td>Staging Lanes</td>
+              <td>Bo Love</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+            </tr>
+            <tr>
+              <td>Back Wall Eliminations</td>
+              <td>Jenn</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+            </tr>
+            <tr>
+              <td>Back Printer</td>
+              <td>Jenn and Arielle</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
             </tr>
             <tr>
               <td>Track Timing System Tech.</td>
@@ -343,9 +364,9 @@
               <td>250-478-6606</td>
               <td><a href="mailto:cngarth@telus.net">cngarth@telus.net</a></td>
             </tr>
-            <tr class="VolunteerNeeded">
+            <tr> <!-- class="VolunteerNeeded" -->
               <td>50/50</td>
-              <td>Volunteer Needed</td>
+              <td>Arielle</td>
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td>&nbsp;</td>
