Update fixed alert success a. Updated dates for rain date.

--- a/src/Events.html
+++ b/src/Events.html
@@ -125,7 +125,8 @@
               <li style="margin-left: 36px;" id="8thRace">29 - SHOOTOUT</li>
               <li style="margin-left: 5px;" id="9thRace">Aug 19 - Points - All Classes</li>
               <li style="margin-left: 1px;" id="10thRace">Sept &nbsp;&nbsp;9 - Points - All Classes</li>
-              <li style="margin-left: 35px; margin-bottom: 5px;" id="11thRace">23 - Championship Race</li>
+              <li style="margin-left: 35px; margin-bottom: 5px;" id="11thRace">23 - Points - All Classes</li>
+              <li class="new" style="margin-left: 35px;" id="12thRace">30 - Championship Race</li>
               <!-- Classes .current .over .cancelled .new -->
             </ul>
           </div>
