--- a/src/SISLRA/RacePoints/BikePoints.htm
+++ b/src/SISLRA/RacePoints/BikePoints.htm
@@ -7,11 +7,11 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link rel=File-List href="BikePoints_files/filelist.xml">
-<style id="Points_2017_FINAL (1)_29760_Styles">
+<style id="ALL_CLASSES_Points_2018 (1)_25792_Styles">
 <!--table
 	{mso-displayed-decimal-separator:"\.";
 	mso-displayed-thousand-separator:"\,";}
-.xl1529760
+.xl1525792
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -29,7 +29,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl6329760
+.xl6325792
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -47,7 +47,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl6429760
+.xl6425792
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -65,45 +65,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl6529760
-	{padding-top:1px;
-	padding-right:1px;
-	padding-left:1px;
-	mso-ignore:padding;
-	color:black;
-	font-size:20.0pt;
-	font-weight:700;
-	font-style:normal;
-	text-decoration:none;
-	font-family:Calibri, sans-serif;
-	mso-font-charset:0;
-	mso-number-format:General;
-	text-align:center;
-	vertical-align:bottom;
-	border:1.0pt solid windowtext;
-	background:#FFE699;
-	mso-pattern:white none;
-	white-space:nowrap;}
-.xl6629760
-	{padding-top:1px;
-	padding-right:1px;
-	padding-left:1px;
-	mso-ignore:padding;
-	color:black;
-	font-size:11.0pt;
-	font-weight:700;
-	font-style:normal;
-	text-decoration:none;
-	font-family:Calibri, sans-serif;
-	mso-font-charset:0;
-	mso-number-format:General;
-	text-align:center;
-	vertical-align:bottom;
-	border:1.0pt solid windowtext;
-	background:#FFE699;
-	mso-pattern:white none;
-	white-space:nowrap;}
-.xl6729760
+.xl6525792
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -122,7 +84,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	background:white;
 	mso-pattern:white none;
 	white-space:nowrap;}
-.xl6829760
+.xl6625792
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -141,7 +103,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	background:white;
 	mso-pattern:white none;
 	white-space:nowrap;}
-.xl6929760
+.xl6725792
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -160,7 +122,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	background:white;
 	mso-pattern:white none;
 	white-space:nowrap;}
-.xl7029760
+.xl6825792
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -179,7 +141,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	background:white;
 	mso-pattern:white none;
 	white-space:nowrap;}
-.xl7129760
+.xl6925792
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -198,7 +160,26 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	background:white;
 	mso-pattern:white none;
 	white-space:nowrap;}
-.xl7229760
+.xl7025792
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:9.0pt;
+	font-weight:700;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Calibri, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:General;
+	text-align:general;
+	vertical-align:bottom;
+	border:1.0pt solid windowtext;
+	background:white;
+	mso-pattern:white none;
+	white-space:normal;}
+.xl7125792
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -217,6 +198,44 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	background:white;
 	mso-pattern:white gray-0625;
 	white-space:nowrap;}
+.xl7225792
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:20.0pt;
+	font-weight:700;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Calibri, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:General;
+	text-align:center;
+	vertical-align:bottom;
+	border:1.0pt solid windowtext;
+	background:#4D4DFF;
+	mso-pattern:black none;
+	white-space:nowrap;}
+.xl7325792
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:11.0pt;
+	font-weight:700;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Calibri, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:General;
+	text-align:center;
+	vertical-align:bottom;
+	border:1.0pt solid windowtext;
+	background:#4D4DFF;
+	mso-pattern:black none;
+	white-space:nowrap;}
 -->
 </style>
 </head>
@@ -231,102 +250,143 @@ tags will be replaced.-->
 <!--START OF OUTPUT FROM EXCEL PUBLISH AS WEB PAGE WIZARD -->
 <!----------------------------->
 
-<div id="Points_2017_FINAL (1)_29760" align=center x:publishsource="Excel">
+<div id="ALL_CLASSES_Points_2018 (1)_25792" align=center x:publishsource="Excel">
 
-<table border=0 cellpadding=0 cellspacing=0 width=935 style='border-collapse:
- collapse;table-layout:fixed;width:698pt'>
- <col class=xl6429760 width=70 span=2 style='width:52pt'>
- <col width=104 style='mso-width-source:userset;mso-width-alt:3503;width:78pt'>
- <col width=67 span=9 style='width:50pt'>
- <col width=25 style='mso-width-source:userset;mso-width-alt:835;width:19pt'>
- <col width=63 style='mso-width-source:userset;mso-width-alt:2115;width:47pt'>
- <tr height=20 style='height:14.7pt'>
-  <td colspan=14 rowspan=2 height=40 class=xl6529760 width=935
-  style='height:29.4pt;width:698pt'>SISLRA Bike Points
-  2017</td>
+<table border=0 cellpadding=0 cellspacing=0 width=1134 style='border-collapse:
+ collapse;table-layout:fixed;width:850pt'>
+ <col class=xl6425792 width=64 span=2 style='width:48pt'>
+ <col width=96 style='mso-width-source:userset;mso-width-alt:3510;width:72pt'>
+ <col width=64 span=13 style='width:48pt'>
+ <col width=23 style='mso-width-source:userset;mso-width-alt:841;width:17pt'>
+ <col width=55 style='mso-width-source:userset;mso-width-alt:2011;width:41pt'>
+ <tr height=21 style='height:15.75pt'>
+  <td colspan=18 rowspan=2 height=42 class=xl7225792 width=1134
+  style='height:31.5pt;width:850pt'>SISLRA Bike Points
+  2018</td>
  </tr>
- <tr height=20 style='height:14.7pt'>
+ <tr height=21 style='height:15.75pt'>
  </tr>
- <tr class=xl6329760 height=20 style='height:14.7pt'>
-  <td height=20 class=xl6729760 style='height:14.7pt;border-top:none'>Place</td>
-  <td class=xl6729760 style='border-top:none;border-left:none'>Car #</td>
-  <td class=xl6829760 style='border-top:none;border-left:none'>Driver's Name</td>
-  <td class=xl6829760 style='border-top:none;border-left:none'>Member</td>
-  <td class=xl6829760 style='border-top:none;border-left:none'>Total</td>
-  <td class=xl6929760 style='border-top:none;border-left:none'>Apr 23</td>
-  <td class=xl6829760 style='border-top:none;border-left:none'>Apr 30</td>
-  <td class=xl6829760 style='border-top:none;border-left:none'>May 7</td>
-  <td class=xl6829760 style='border-top:none;border-left:none'>May 14</td>
-  <td class=xl6829760 style='border-top:none;border-left:none'>Jun 11</td>
-  <td class=xl6829760 style='border-top:none;border-left:none'>Jun 18</td>
-  <td class=xl6929760 style='border-top:none;border-left:none'>Sep 17</td>
-  <td class=xl6929760 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl6829760 style='border-top:none;border-left:none'>BONUS</td>
+ <tr class=xl6325792 height=46 style='mso-height-source:userset;height:34.5pt'>
+  <td height=46 class=xl6525792 style='height:34.5pt;border-top:none'>Place</td>
+  <td class=xl6525792 style='border-top:none;border-left:none'>Car #</td>
+  <td class=xl6625792 style='border-top:none;border-left:none'>Driver's Name</td>
+  <td class=xl6625792 style='border-top:none;border-left:none'>Member</td>
+  <td class=xl6625792 style='border-top:none;border-left:none'>Total</td>
+  <td class=xl6725792 style='border-top:none;border-left:none'>Apr 22</td>
+  <td class=xl6625792 style='border-top:none;border-left:none'>Apr 29</td>
+  <td class=xl6625792 style='border-top:none;border-left:none'>May 6</td>
+  <td class=xl6625792 style='border-top:none;border-left:none'>May 13</td>
+  <td class=xl6625792 style='border-top:none;border-left:none'>Jun 3</td>
+  <td class=xl6625792 style='border-top:none;border-left:none'>Jun 10</td>
+  <td class=xl6725792 style='border-top:none;border-left:none'>Jul 8</td>
+  <td class=xl6725792 style='border-top:none;border-left:none'>Jul 29</td>
+  <td class=xl6725792 style='border-top:none;border-left:none'>Aug 19</td>
+  <td class=xl6725792 style='border-top:none;border-left:none'>Sep 9</td>
+  <td class=xl6725792 style='border-top:none;border-left:none'>Sep 23</td>
+  <td class=xl6725792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl7025792 width=55 style='border-top:none;border-left:none;
+  width:41pt'>Volunteer Bonus</td>
+ </tr>
+ <tr height=21 style='height:15.75pt'>
+  <td height=21 class=xl6825792 style='height:15.75pt;border-top:none'>1</td>
+  <td class=xl6825792 style='border-top:none;border-left:none'>601</td>
+  <td class=xl6925792 style='border-top:none;border-left:none'>Trevor Miles</td>
+  <td class=xl6925792 style='border-top:none;border-left:none'>YES</td>
+  <td class=xl6925792 align=right style='border-top:none;border-left:none'>1204</td>
+  <td class=xl7125792 style='border-top:none;border-left:none'>602</td>
+  <td class=xl6925792 align=right style='border-top:none;border-left:none'>602</td>
+  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
+ </tr>
+ <tr height=21 style='height:15.75pt'>
+  <td height=21 class=xl6825792 style='height:15.75pt;border-top:none'>2</td>
+  <td class=xl6825792 style='border-top:none;border-left:none'>1000</td>
+  <td class=xl6925792 style='border-top:none;border-left:none'>Jim Hannah</td>
+  <td class=xl6925792 style='border-top:none;border-left:none'>YES</td>
+  <td class=xl6925792 align=right style='border-top:none;border-left:none'>802</td>
+  <td class=xl7125792 style='border-top:none;border-left:none'>401</td>
+  <td class=xl6925792 align=right style='border-top:none;border-left:none'>401</td>
+  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
  </tr>
  <tr height=23 style='mso-height-source:userset;height:17.25pt'>
-  <td height=23 class=xl7029760 style='height:17.25pt;border-top:none'>1</td>
-  <td class=xl7029760 style='border-top:none;border-left:none'>75</td>
-  <td class=xl7129760 style='border-top:none;border-left:none'>Elias Dick</td>
-  <td class=xl7129760 style='border-top:none;border-left:none'>YES</td>
-  <td class=xl7129760 align=right style='border-top:none;border-left:none'>2006</td>
-  <td class=xl7229760 style='border-top:none;border-left:none'>RO</td>
-  <td class=xl7129760 align=right style='border-top:none;border-left:none'>602</td>
-  <td class=xl7129760 align=right style='border-top:none;border-left:none'>602</td>
-  <td class=xl7129760 align=right style='border-top:none;border-left:none'>300</td>
-  <td class=xl7129760 align=right style='border-top:none;border-left:none'>502</td>
-  <td class=xl7229760 style='border-top:none;border-left:none'>RO</td>
-  <td class=xl7229760 style='border-top:none;border-left:none'>RO</td>
-  <td class=xl7129760 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7129760 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td height=23 class=xl6825792 style='height:17.25pt;border-top:none'>3</td>
+  <td class=xl6825792 style='border-top:none;border-left:none'>75</td>
+  <td class=xl6925792 style='border-top:none;border-left:none'>Elias Dick</td>
+  <td class=xl6925792 style='border-top:none;border-left:none'>NO</td>
+  <td class=xl6925792 align=right style='border-top:none;border-left:none'>600</td>
+  <td class=xl7125792 style='border-top:none;border-left:none'>300</td>
+  <td class=xl6925792 align=right style='border-top:none;border-left:none'>300</td>
+  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
  </tr>
- <tr height=20 style='height:14.7pt'>
-  <td height=20 class=xl7029760 style='height:14.7pt;border-top:none'>2</td>
-  <td class=xl7029760 style='border-top:none;border-left:none'>1000</td>
-  <td class=xl7129760 style='border-top:none;border-left:none'>Jim Hannah</td>
-  <td class=xl7129760 style='border-top:none;border-left:none'>YES</td>
-  <td class=xl7129760 align=right style='border-top:none;border-left:none'>1577</td>
-  <td class=xl7229760 style='border-top:none;border-left:none'>RO</td>
-  <td class=xl7129760 align=right style='border-top:none;border-left:none'>300</td>
-  <td class=xl7129760 align=right style='border-top:none;border-left:none'>300</td>
-  <td class=xl7129760 align=right style='border-top:none;border-left:none'>602</td>
-  <td class=xl7129760 align=right style='border-top:none;border-left:none'>300</td>
-  <td class=xl7229760 style='border-top:none;border-left:none'>RO</td>
-  <td class=xl7229760 style='border-top:none;border-left:none'>RO</td>
-  <td class=xl7129760 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7129760 align=right style='border-top:none;border-left:none'>75</td>
- </tr>
- <tr height=20 style='height:14.7pt'>
-  <td height=20 class=xl7029760 style='height:14.7pt;border-top:none'>3</td>
-  <td class=xl7029760 style='border-top:none;border-left:none'>1198</td>
-  <td class=xl7129760 style='border-top:none;border-left:none'>Robbie Kent</td>
-  <td class=xl7129760 style='border-top:none;border-left:none'>YES</td>
-  <td class=xl7129760 align=right style='border-top:none;border-left:none'>300</td>
-  <td class=xl7229760 style='border-top:none;border-left:none'>RO</td>
-  <td class=xl7129760 align=right style='border-top:none;border-left:none'>300</td>
-  <td class=xl7129760 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7129760 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7129760 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7229760 style='border-top:none;border-left:none'>RO</td>
-  <td class=xl7229760 style='border-top:none;border-left:none'>RO</td>
-  <td class=xl7129760 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7129760 style='border-top:none;border-left:none'>&nbsp;</td>
+ <tr height=21 style='height:15.75pt'>
+  <td height=21 class=xl6825792 style='height:15.75pt;border-top:none'>4</td>
+  <td class=xl6825792 style='border-top:none;border-left:none'>1968</td>
+  <td class=xl6925792 style='border-top:none;border-left:none'>Dave DeGrassi</td>
+  <td class=xl6925792 style='border-top:none;border-left:none'>NO</td>
+  <td class=xl6925792 align=right style='border-top:none;border-left:none'>300</td>
+  <td class=xl7125792 style='border-top:none;border-left:none'>300</td>
+  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
  </tr>
  <![if supportMisalignedColumns]>
  <tr height=0 style='display:none'>
-  <td width=70 style='width:52pt'></td>
-  <td width=70 style='width:52pt'></td>
-  <td width=104 style='width:78pt'></td>
-  <td width=67 style='width:50pt'></td>
-  <td width=67 style='width:50pt'></td>
-  <td width=67 style='width:50pt'></td>
-  <td width=67 style='width:50pt'></td>
-  <td width=67 style='width:50pt'></td>
-  <td width=67 style='width:50pt'></td>
-  <td width=67 style='width:50pt'></td>
-  <td width=67 style='width:50pt'></td>
-  <td width=67 style='width:50pt'></td>
-  <td width=25 style='width:19pt'></td>
-  <td width=63 style='width:47pt'></td>
+  <td width=64 style='width:48pt'></td>
+  <td width=64 style='width:48pt'></td>
+  <td width=96 style='width:72pt'></td>
+  <td width=64 style='width:48pt'></td>
+  <td width=64 style='width:48pt'></td>
+  <td width=64 style='width:48pt'></td>
+  <td width=64 style='width:48pt'></td>
+  <td width=64 style='width:48pt'></td>
+  <td width=64 style='width:48pt'></td>
+  <td width=64 style='width:48pt'></td>
+  <td width=64 style='width:48pt'></td>
+  <td width=64 style='width:48pt'></td>
+  <td width=64 style='width:48pt'></td>
+  <td width=64 style='width:48pt'></td>
+  <td width=64 style='width:48pt'></td>
+  <td width=64 style='width:48pt'></td>
+  <td width=23 style='width:17pt'></td>
+  <td width=55 style='width:41pt'></td>
  </tr>
  <![endif]>
 </table>
