--- a/src/SISLRA/RacePoints/BikePoints.htm
+++ b/src/SISLRA/RacePoints/BikePoints.htm
@@ -7,11 +7,11 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link rel=File-List href="BikePoints_files/filelist.xml">
-<style id="ALL_CLASSES_Points_2018 (1)_25792_Styles">
+<style id="ALL_CLASSES_Points_2018 (2)_24900_Styles">
 <!--table
 	{mso-displayed-decimal-separator:"\.";
 	mso-displayed-thousand-separator:"\,";}
-.xl1525792
+.xl1524900
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -29,7 +29,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl6325792
+.xl6324900
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -47,7 +47,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl6425792
+.xl6424900
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -65,7 +65,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl6525792
+.xl6524900
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -84,7 +84,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	background:white;
 	mso-pattern:white none;
 	white-space:nowrap;}
-.xl6625792
+.xl6624900
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -103,7 +103,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	background:white;
 	mso-pattern:white none;
 	white-space:nowrap;}
-.xl6725792
+.xl6724900
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -122,7 +122,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	background:white;
 	mso-pattern:white none;
 	white-space:nowrap;}
-.xl6825792
+.xl6824900
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -141,7 +141,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	background:white;
 	mso-pattern:white none;
 	white-space:nowrap;}
-.xl6925792
+.xl6924900
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -160,26 +160,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	background:white;
 	mso-pattern:white none;
 	white-space:nowrap;}
-.xl7025792
-	{padding-top:1px;
-	padding-right:1px;
-	padding-left:1px;
-	mso-ignore:padding;
-	color:black;
-	font-size:9.0pt;
-	font-weight:700;
-	font-style:normal;
-	text-decoration:none;
-	font-family:Calibri, sans-serif;
-	mso-font-charset:0;
-	mso-number-format:General;
-	text-align:general;
-	vertical-align:bottom;
-	border:1.0pt solid windowtext;
-	background:white;
-	mso-pattern:white none;
-	white-space:normal;}
-.xl7125792
+.xl7024900
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -198,7 +179,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	background:white;
 	mso-pattern:white gray-0625;
 	white-space:nowrap;}
-.xl7225792
+.xl7124900
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -214,10 +195,10 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	text-align:center;
 	vertical-align:bottom;
 	border:1.0pt solid windowtext;
-	background:#4D4DFF;
+	background:#4286F4;
 	mso-pattern:black none;
 	white-space:nowrap;}
-.xl7325792
+.xl7224900
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -233,7 +214,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	text-align:center;
 	vertical-align:bottom;
 	border:1.0pt solid windowtext;
-	background:#4D4DFF;
+	background:#4286F4;
 	mso-pattern:black none;
 	white-space:nowrap;}
 -->
@@ -250,122 +231,68 @@ tags will be replaced.-->
 <!--START OF OUTPUT FROM EXCEL PUBLISH AS WEB PAGE WIZARD -->
 <!----------------------------->
 
-<div id="ALL_CLASSES_Points_2018 (1)_25792" align=center x:publishsource="Excel">
+<div id="ALL_CLASSES_Points_2018 (2)_24900" align=center x:publishsource="Excel">
 
-<table border=0 cellpadding=0 cellspacing=0 width=1134 style='border-collapse:
- collapse;table-layout:fixed;width:850pt'>
- <col class=xl6425792 width=64 span=2 style='width:48pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=544 style='border-collapse:
+ collapse;table-layout:fixed;width:408pt'>
+ <col class=xl6424900 width=64 span=2 style='width:48pt'>
  <col width=96 style='mso-width-source:userset;mso-width-alt:3510;width:72pt'>
- <col width=64 span=13 style='width:48pt'>
- <col width=23 style='mso-width-source:userset;mso-width-alt:841;width:17pt'>
- <col width=55 style='mso-width-source:userset;mso-width-alt:2011;width:41pt'>
+ <col width=64 span=5 style='width:48pt'>
  <tr height=21 style='height:15.75pt'>
-  <td colspan=18 rowspan=2 height=42 class=xl7225792 width=1134
-  style='height:31.5pt;width:850pt'>SISLRA Bike Points
-  2018</td>
+  <td colspan=8 rowspan=2 height=42 class=xl7124900 width=544 style='height:
+  31.5pt;width:408pt'>SISLRA Bike Points 2018</td>
  </tr>
  <tr height=21 style='height:15.75pt'>
  </tr>
- <tr class=xl6325792 height=46 style='mso-height-source:userset;height:34.5pt'>
-  <td height=46 class=xl6525792 style='height:34.5pt;border-top:none'>Place</td>
-  <td class=xl6525792 style='border-top:none;border-left:none'>Car #</td>
-  <td class=xl6625792 style='border-top:none;border-left:none'>Driver's Name</td>
-  <td class=xl6625792 style='border-top:none;border-left:none'>Member</td>
-  <td class=xl6625792 style='border-top:none;border-left:none'>Total</td>
-  <td class=xl6725792 style='border-top:none;border-left:none'>Apr 22</td>
-  <td class=xl6625792 style='border-top:none;border-left:none'>Apr 29</td>
-  <td class=xl6625792 style='border-top:none;border-left:none'>May 6</td>
-  <td class=xl6625792 style='border-top:none;border-left:none'>May 13</td>
-  <td class=xl6625792 style='border-top:none;border-left:none'>Jun 3</td>
-  <td class=xl6625792 style='border-top:none;border-left:none'>Jun 10</td>
-  <td class=xl6725792 style='border-top:none;border-left:none'>Jul 8</td>
-  <td class=xl6725792 style='border-top:none;border-left:none'>Jul 29</td>
-  <td class=xl6725792 style='border-top:none;border-left:none'>Aug 19</td>
-  <td class=xl6725792 style='border-top:none;border-left:none'>Sep 9</td>
-  <td class=xl6725792 style='border-top:none;border-left:none'>Sep 23</td>
-  <td class=xl6725792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7025792 width=55 style='border-top:none;border-left:none;
-  width:41pt'>Volunteer Bonus</td>
+ <tr class=xl6324900 height=46 style='mso-height-source:userset;height:34.5pt'>
+  <td height=46 class=xl6524900 style='height:34.5pt;border-top:none'>Place</td>
+  <td class=xl6524900 style='border-top:none;border-left:none'>Car #</td>
+  <td class=xl6624900 style='border-top:none;border-left:none'>Driver's Name</td>
+  <td class=xl6624900 style='border-top:none;border-left:none'>Member</td>
+  <td class=xl6624900 style='border-top:none;border-left:none'>Total</td>
+  <td class=xl6724900 style='border-top:none;border-left:none'>Apr 22</td>
+  <td class=xl6624900 style='border-top:none;border-left:none'>Apr 29</td>
+  <td class=xl6624900 style='border-top:none;border-left:none'>Jun 10</td>
  </tr>
  <tr height=21 style='height:15.75pt'>
-  <td height=21 class=xl6825792 style='height:15.75pt;border-top:none'>1</td>
-  <td class=xl6825792 style='border-top:none;border-left:none'>601</td>
-  <td class=xl6925792 style='border-top:none;border-left:none'>Trevor Miles</td>
-  <td class=xl6925792 style='border-top:none;border-left:none'>YES</td>
-  <td class=xl6925792 align=right style='border-top:none;border-left:none'>1204</td>
-  <td class=xl7125792 style='border-top:none;border-left:none'>602</td>
-  <td class=xl6925792 align=right style='border-top:none;border-left:none'>602</td>
-  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td height=21 class=xl6824900 style='height:15.75pt;border-top:none'>1</td>
+  <td class=xl6824900 style='border-top:none;border-left:none'>601</td>
+  <td class=xl6924900 style='border-top:none;border-left:none'>Trevor Miles</td>
+  <td class=xl6924900 style='border-top:none;border-left:none'>YES</td>
+  <td class=xl6924900 align=right style='border-top:none;border-left:none'>1806</td>
+  <td class=xl7024900 style='border-top:none;border-left:none'>602</td>
+  <td class=xl6924900 align=right style='border-top:none;border-left:none'>602</td>
+  <td class=xl7024900 style='border-top:none;border-left:none'>602</td>
  </tr>
  <tr height=21 style='height:15.75pt'>
-  <td height=21 class=xl6825792 style='height:15.75pt;border-top:none'>2</td>
-  <td class=xl6825792 style='border-top:none;border-left:none'>1000</td>
-  <td class=xl6925792 style='border-top:none;border-left:none'>Jim Hannah</td>
-  <td class=xl6925792 style='border-top:none;border-left:none'>YES</td>
-  <td class=xl6925792 align=right style='border-top:none;border-left:none'>802</td>
-  <td class=xl7125792 style='border-top:none;border-left:none'>401</td>
-  <td class=xl6925792 align=right style='border-top:none;border-left:none'>401</td>
-  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td height=21 class=xl6824900 style='height:15.75pt;border-top:none'>2</td>
+  <td class=xl6824900 style='border-top:none;border-left:none'>1000</td>
+  <td class=xl6924900 style='border-top:none;border-left:none'>Jim Hannah</td>
+  <td class=xl6924900 style='border-top:none;border-left:none'>YES</td>
+  <td class=xl6924900 align=right style='border-top:none;border-left:none'>1203</td>
+  <td class=xl7024900 style='border-top:none;border-left:none'>401</td>
+  <td class=xl6924900 align=right style='border-top:none;border-left:none'>401</td>
+  <td class=xl7024900 style='border-top:none;border-left:none'>401</td>
  </tr>
  <tr height=23 style='mso-height-source:userset;height:17.25pt'>
-  <td height=23 class=xl6825792 style='height:17.25pt;border-top:none'>3</td>
-  <td class=xl6825792 style='border-top:none;border-left:none'>75</td>
-  <td class=xl6925792 style='border-top:none;border-left:none'>Elias Dick</td>
-  <td class=xl6925792 style='border-top:none;border-left:none'>NO</td>
-  <td class=xl6925792 align=right style='border-top:none;border-left:none'>600</td>
-  <td class=xl7125792 style='border-top:none;border-left:none'>300</td>
-  <td class=xl6925792 align=right style='border-top:none;border-left:none'>300</td>
-  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td height=23 class=xl6824900 style='height:17.25pt;border-top:none'>3</td>
+  <td class=xl6824900 style='border-top:none;border-left:none'>75</td>
+  <td class=xl6924900 style='border-top:none;border-left:none'>Elias Dick</td>
+  <td class=xl6924900 style='border-top:none;border-left:none'>YES</td>
+  <td class=xl6924900 align=right style='border-top:none;border-left:none'>900</td>
+  <td class=xl7024900 style='border-top:none;border-left:none'>300</td>
+  <td class=xl6924900 align=right style='border-top:none;border-left:none'>300</td>
+  <td class=xl7024900 style='border-top:none;border-left:none'>300</td>
  </tr>
  <tr height=21 style='height:15.75pt'>
-  <td height=21 class=xl6825792 style='height:15.75pt;border-top:none'>4</td>
-  <td class=xl6825792 style='border-top:none;border-left:none'>1968</td>
-  <td class=xl6925792 style='border-top:none;border-left:none'>Dave DeGrassi</td>
-  <td class=xl6925792 style='border-top:none;border-left:none'>NO</td>
-  <td class=xl6925792 align=right style='border-top:none;border-left:none'>300</td>
-  <td class=xl7125792 style='border-top:none;border-left:none'>300</td>
-  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7125792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl6925792 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td height=21 class=xl6824900 style='height:15.75pt;border-top:none'>4</td>
+  <td class=xl6824900 style='border-top:none;border-left:none'>1968</td>
+  <td class=xl6924900 style='border-top:none;border-left:none'>Dave DeGrassi</td>
+  <td class=xl6924900 style='border-top:none;border-left:none'>NO</td>
+  <td class=xl6924900 align=right style='border-top:none;border-left:none'>300</td>
+  <td class=xl7024900 style='border-top:none;border-left:none'>300</td>
+  <td class=xl6924900 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl7024900 style='border-top:none;border-left:none'>&nbsp;</td>
  </tr>
  <![if supportMisalignedColumns]>
  <tr height=0 style='display:none'>
@@ -377,16 +304,6 @@ tags will be replaced.-->
   <td width=64 style='width:48pt'></td>
   <td width=64 style='width:48pt'></td>
   <td width=64 style='width:48pt'></td>
-  <td width=64 style='width:48pt'></td>
-  <td width=64 style='width:48pt'></td>
-  <td width=64 style='width:48pt'></td>
-  <td width=64 style='width:48pt'></td>
-  <td width=64 style='width:48pt'></td>
-  <td width=64 style='width:48pt'></td>
-  <td width=64 style='width:48pt'></td>
-  <td width=64 style='width:48pt'></td>
-  <td width=23 style='width:17pt'></td>
-  <td width=55 style='width:41pt'></td>
  </tr>
  <![endif]>
 </table>
