--- a/src/Events.html
+++ b/src/Events.html
@@ -126,19 +126,19 @@
 
           <div class="animated zoomInDown">
             <ul>
-              <li style='text-align:center;'>To Be Determined</li>
-              <!-- <li style="margin-left: 10px; margin-top: 10px;" id="1stRace">Apr 22 - Points - All Classes</li>
-              <li style="margin-left: 37px;" id="2ndRace">29 - Points - All Classes</li>
-              <li style="margin-left: 5px;" id="3rdRace">May &nbsp;&nbsp;6 - Points - All Classes</li>
-              <li style="margin-left: 37px;" id="4thRace">13 - Points - All Classes</li>
-              <li style="margin-left: 0px;" id="5thRace">June &nbsp;&nbsp;3 - Points - All Classes</li>
-              <li style="margin-left: 36px;" id="6thRace">10 - Points - All Classes</li> 
-              <li style="margin-left: 5px;" id="7thRace">July &nbsp;&nbsp;8 - Points - All Classes</li> 
-              <li style="margin-left: 36px;" id="8thRace">29 - SHOOTOUT</li>
-              <li style="margin-left: 5px;" id="9thRace">Aug 19 - Points - All Classes</li>
-              <li style="margin-left: 1px;" id="10thRace">Sept &nbsp;&nbsp;9 - Points - All Classes</li>
-              <li style="margin-left: 35px;" id="11thRace">23 - Points - All Classes</li>
-              <li class="new" style="margin-left: 35px; margin-bottom: 5px;" id="12thRace">30 - Championship Race</li> -->
+              <!-- <li style='text-align:center;'>To Be Determined</li> -->
+              <li style="margin-left: 10px; margin-top: 10px;" id="1stRace">Apr &nbsp;&nbsp;7 - Points - All Classes</li>
+              <li style="margin-left: 37px;" id="2ndRace">28 - Points - All Classes</li>
+              <li style="margin-left: 5px;" id="3rdRace">May &nbsp;&nbsp;5 - Points - All Classes</li>
+              <li style="margin-left: 37px;" id="4thRace">12 - Points - All Classes</li>
+              <li style="margin-left: 0px;" id="5thRace">June &nbsp;&nbsp;2 - Points - All Classes</li>
+              <li style="margin-left: 36px;" id="6thRace">&nbsp;&nbsp;9 - Points - All Classes</li> 
+              <li style="margin-left: 5px;" id="7thRace">July 14 - Points - All Classes</li> 
+              <li style="margin-left: 36px;" id="8thRace">28 - SHOOTOUT</li>
+              <li style="margin-left: 5px;" id="9thRace">Aug 18 - Points - All Classes</li>
+              <li style="margin-left: 1px;" id="10thRace">Sept &nbsp;&nbsp;8 - Points - All Classes</li>
+              <li style="margin-left: 35px;" id="11thRace">22 - Points - All Classes</li>
+              <!-- <li class="new" style="margin-left: 35px; margin-bottom: 5px;" id="12thRace">30 - Championship Race</li> -->
               <!-- Classes .current .over .cancelled .new -->
             </ul>
           </div>
@@ -178,9 +178,9 @@
         <h1 id="Posters">Posters</h1>
     
         <div class="posterCenter">
-           <!--  <h2>2019</h2>
+           <h2>2019</h2>
             <img id="YearPoster2019" class="poster" data-toggle="modal" data-target="#YearPoster2019Modal" src="/SISLRA/Events/YearPoster2019.jpg" />
-            <img id="StreetCarShootoutPoster2019" class="poster" data-toggle="modal" data-target="#StreetCarShootout2019Modal" src="/SISLRA/Events/StreetCarShootout2019.jpg" />
+           <!-- <img id="StreetCarShootoutPoster2019" class="poster" data-toggle="modal" data-target="#StreetCarShootout2019Modal" src="/SISLRA/Events/StreetCarShootout2019.jpg" />
            --><h2>2018</h2>
             <img id="YearPoster2018" class="poster" data-toggle="modal" data-target="#YearPoster2018Modal" src="/SISLRA/Events/YearPoster2018.jpg" />
             <img id="StreetCarShootoutPoster2018" class="poster" data-toggle="modal" data-target="#StreetCarShootout2018Modal" src="/SISLRA/Events/StreetCarShootout2018.jpg" />
@@ -192,6 +192,23 @@
             <img id="StreetCarShootoutPoster2016" class="poster" data-toggle="modal" data-target="#StreetCarShootout2016Modal" src="/SISLRA/Events/StreetCarShootout2016.jpg" />
         </div>
         
+        <div class="modal fade" id="YearPoster2019Modal" role="dialog">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Year Poster 2019</h4>
+              </div>
+              <div class="modal-body">
+                <img id="YearPoster2019" src="/SISLRA/Events/YearPoster2019.jpg" />
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <div class="modal fade" id="YearPoster2018Modal" role="dialog">
           <div class="modal-dialog">
             <div class="modal-content">
