Updated race dates, posters and index main content.

--- a/src/ContactUs.html
+++ b/src/ContactUs.html
@@ -117,10 +117,10 @@
               <td>Clint Neargarth</td>
               <td>#50</td>
               <td>250-478-6606</td>
-              <td><a href="mailto:6t4tbolt@gmail.com">6t4tbolt@gmail.com</a></td>
+              <td><a href="mailto:64tbolt@gmail.com">64tbolt@gmail.com</a></td>
             </tr>
             <tr>
-              <td>Vice Precident</td>
+              <td>Vice President</td>
               <td>Tracy Barnes</td>
               <td>#208</td>
               <td>250-812-6201</td>
@@ -180,7 +180,7 @@
               <td>Clint Neargarth</td>
               <td>#50</td>
               <td>250-478-6606</td>
-              <td><a href="mailto:6t4tbolt@gmail.com">6t4tbolt@gmail.com</a></td>
+              <td><a href="mailto:64tbolt@gmail.com">64tbolt@gmail.com</a></td>
             </tr>
             <tr>
               <td>Sponsorship Coordinator</td>
@@ -341,7 +341,7 @@
               <td>Clint Neargarth</td>
               <td>#50</td>
               <td>250-478-6606</td>
-              <td><a href="mailto:6t4tbolt@gmail.com">6t4tbolt@gmail.com</a><a href="mailto:cngarth@telus.net"></a></td>
+              <td><a href="mailto:64tbolt@gmail.com">64tbolt@gmail.com</a><a href="mailto:cngarth@telus.net"></a></td>
             </tr>
             <tr>
               <td>New Racers, Drivers Info. & Numbers</td>
