--- a/src/RacerInfo.html
+++ b/src/RacerInfo.html
@@ -104,17 +104,17 @@
     <div class="row">
       <div class="col-7 col-m-7 main mainCenter listStyleDisc">
       
-        <object data="/SISLRA/RacersInfo/NewRacersInformation.pdf" type="application/pdf" width="95%" height="800">
+        <!-- <object data="/SISLRA/RacersInfo/NewRacersInformation.pdf" type="application/pdf" width="95%" height="800">
           <p>Alternative text - include a link <a href="/SISLRA/RacersInfo/NewRacersInformation.pdf">to the PDF!</a></p>
-        </object>
+        </object> -->
 
-        <!-- <h1 id="Fees">FEES</h1>
+      <h1 id="Fees">FEES</h1>
         <div id="feesDiv">
           <p>Members Entry Fees Per Race</p>
           <br>
-          <p><strong>Street Class</strong> - $30.00 for vehicle and member*</p>
+          <p><strong>Street Class</strong> - $35.00 for vehicle and member*</p>
           <p><strong>Bike Class</strong> - $30.00 for bike and member*</p>
-          <p><strong>Pro Class</strong> - $35.00 for vehicle and member*</p>
+          <p><strong>Pro Class</strong> - $45.00 for vehicle and member*</p>
           <p><strong>Pit Passes</strong> - $10.00 per member*</p>
           <br>
           <p>Non-members add $5.00.</p>
@@ -348,7 +348,7 @@
           <strong>RED LIGHT:</strong> When a car leaves the starting line before the green light comes on, or, in some cases, is
           staged too deeply into the staging beams, the red light will flash in that lane. It indicates the driver in
           that lane has been disqualified. During competition, only one red light will illuminate, thus eliminating
-          only the first offender.</p> -->
+          only the first offender.</p>
         
       </div>
     </div> <!-- End of row -->
