Posted StreetCarShootout2019.jpg Minor update.

--- a/src/Events.html
+++ b/src/Events.html
@@ -180,8 +180,8 @@
         <div class="posterCenter">
            <h2>2019</h2>
             <img id="YearPoster2019" class="poster" data-toggle="modal" data-target="#YearPoster2019Modal" src="/SISLRA/Events/YearPoster2019.jpg" />
-           <!-- <img id="StreetCarShootoutPoster2019" class="poster" data-toggle="modal" data-target="#StreetCarShootout2019Modal" src="/SISLRA/Events/StreetCarShootout2019.jpg" />
-           --><h2>2018</h2>
+            <img id="StreetCarShootoutPoster2019" class="poster" data-toggle="modal" data-target="#StreetCarShootout2019Modal" src="/SISLRA/Events/StreetCarShootout2019.jpg" />
+          <h2>2018</h2>
             <img id="YearPoster2018" class="poster" data-toggle="modal" data-target="#YearPoster2018Modal" src="/SISLRA/Events/YearPoster2018.jpg" />
             <img id="StreetCarShootoutPoster2018" class="poster" data-toggle="modal" data-target="#StreetCarShootout2018Modal" src="/SISLRA/Events/StreetCarShootout2018.jpg" />
           <h2>2017</h2>
@@ -201,6 +201,23 @@
               </div>
               <div class="modal-body">
                 <img id="YearPoster2019" src="/SISLRA/Events/YearPoster2019.jpg" />
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="modal fade" id="StreetCarShootout2019Modal" role="dialog">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Street Car Shootout 2019</h4>
+              </div>
+              <div class="modal-body">
+                <img id="StreetCarShootoutPoster2019" src="/SISLRA/Events/StreetCarShootout2019.jpg" />
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
