--- a/src/index.html
+++ b/src/index.html
@@ -155,10 +155,10 @@
           <p>A track burn off has been scheduled for Monday, Apr 9th at 5:30pm, rain or shine. If anyone has an angle grinder they can bring to sharpen scrapers, it would be greatly appreciated. As far as scrapers, tiger torches etc... please bring what you have to make the task faster and easier.</p> 
         </div> -->
         
-        <div id="content">
+        <!-- <div id="content">
           <h1>Attention to racers needing their chassis inspected</h1>
           <p>Certification / re-certification is scheduled for Saturday, April 6th at 8am at Western Speedway in the church parking lot (the old waterslide parking lot). Please register with Bill Jamieson at 250-888-0053. Cost depends on the number of cars being inspected and is in US funds only please.</p>
-        </div>
+        </div> -->
 
         <!-- <h1>New Pre-Pay Card</h1>
         <p>New this season Drag Race Victoria is introducing Admission Pre-pay Punch Cards. Save yourself having to remember to bring cash to the track for the remaining 7 races this season.</p>
