Rain Date and points Update.

--- a/src/Events.html
+++ b/src/Events.html
@@ -137,7 +137,8 @@
               <li style="margin-left: 36px;" id="8thRace">28 - SHOOTOUT</li>
               <li style="margin-left: 5px;" id="9thRace">Aug 18 - Points - All Classes</li>
               <li style="margin-left: 1px;" id="10thRace">Sept &nbsp;&nbsp;8 - Points - All Classes</li>
-              <li style="margin-left: 35px;" id="11thRace">22 - Points - All Classes</li>
+              <li class="cancelled" style="margin-left: 35px;" id="11thRace">22 - Points - All Classes</li>
+              <li class="new" style="margin-left: 7px;" id="12thRace">Oct &nbsp;&nbsp;5 - Points - All Classes - Saturday</li>
               <!-- <li class="new" style="margin-left: 35px; margin-bottom: 5px;" id="12thRace">30 - Championship Race</li> -->
               <!-- Classes .current .over .cancelled .new -->
             </ul>
