--- a/src/index.html
+++ b/src/index.html
@@ -205,7 +205,7 @@
         
         <div id="SilentAuctionEnd">
           <h1>SILENT AUCTION</h1>
-          <p>Our Annual Silent Auction is fast approaching. It will be held at Ma Millers Pub (2903 Sooke Lake Road), Saturday, December 7th at 7pm. Fees are $5 for members and $10 for non-members to cover appetizer costs.</p>
+          <p>Our Annual Silent Auction is fast approaching. It will be held at Ma Millers Pub (2903 Sooke Lake Road), Saturday, December 7th at 7pm. Fees are $5 for members and $10 for non-members.</p>
           <p>We are in need of donations that can be auctioned off at the event. Donated items are not limited to being new or car related. Anything would be greatly appreciated such as gift certificates, gift baskets, or merchandise in new condition for example. (Even a car part you ended up not needing that is in new condition counts.) Our club benefits from 100% of the proceeds which are used for things like track equipment upgrades, season start up fees, etc... With a little effort by us all we can make this a great and fun event with a lot of benefits for the club and our sport.</p>
           <p>Please contact Bill Jamieson 250-888-0053 or Tracy Barnes to arrange drop off or pick-up of your donations.</p>
           <p>Thank you for helping support the sport we all love.</p>
