Add: Bottom margin for indexPointsList for better spacing.
Update:
Final 2019 winners and points.

Fix:
CountDownTable-section Margin to help with shading in header, to give more space for the photos and better spacing over all.

--- a/src/index.html
+++ b/src/index.html
@@ -239,15 +239,15 @@
             <script async charset="utf-8" src="/JavaScript/twitterCode.js"></script>
           </div>
 
-          <h3>2018 1st Place Points Winners.</h3>
+          <h3>2019 1st Place Points Winners.</h3>
 
           <table class="indexWinnersTable">
             <tr>
-              <td><span class="indexPointsWinners">Pro</span><br>#B408<br>Blake Miller</td>
+              <td><span class="indexPointsWinners">Pro</span><br>#6011<br>Bill Nesbitt</td>
               <td><img src="/SISLRA/YearWinners/1stPlaceProClass.png" alt="1st Place Pro Class" /></td>
             </tr>
             <tr>
-              <td><span class="indexPointsWinners">Street</span><br>#52<br>Bill Lasell</td>
+              <td><span class="indexPointsWinners">Street</span><br>#50<br>Clint Neargarth</td>
               <td><img src="/SISLRA/YearWinners/1stPlaceStreetClass.png" alt="1st Place Street Class" /></td>
             </tr>
             <!-- <tr>
@@ -258,16 +258,16 @@
 
           <h3>Congratulations to all Racers.</h3>
           
-            <div class="indexPointsList">
+            <div class="indexPointsList" style="margin-bottom: 10px;">
               <h2 class="pro">Pro Class</h2>
-              <p>1. #B408 Blake Miller - 5727 Points</p>
-              <p>2. #7455 Dave vanHumbeck - 4467 Points</p>
-              <p>3. #C628 Eric Lundstrum - 4342 Points</p>
+              <p>1. #6011 Bill Nesbitt - 6229 Points</p>
+              <p>2. #B408 Blake Miller - 4920 Points</p>
+              <p>3. #273 Eric Laporte - 4015 Points</p>
 
               <h2 class="street">Street Class</h2>
-              <p>1. #52 Bill Lasell - 5830 Points</p>
-              <p>2. #50 Clint Neargarth - 5021 Points</p>
-              <p>3. #108 Lisa Miller - 4718 Points</p>
+              <p>1. #50 Clint Neargarth - 4818 Points</p>
+              <p>2. #15 Tyson Mann - 4520 Points</p>
+              <p>3. #108 Lisa Miller - 4416 Points</p>
               
               <!-- <h2 class="bike">Bike Class</h2>
               <p>1. #75 Elias Dick - 2006 Points.</p>
