Updated SISLRA & NITA events for the next season. Some Clean up and margin spacing fixes.

--- a/src/index.html
+++ b/src/index.html
@@ -108,18 +108,17 @@
           
             <div class="animated fadeInLeft indexSchedule">
               <!-- <p>To Be Determined</p> -->
-              <p style="margin-left: 7px;"  id="1stRace">Apr &nbsp;&nbsp;7 - Points - All Classes</p>
-              <p style="margin-left: 31px;" id="2ndRace">28 - Points - All Classes</p>
-              <p style="margin-left: 3px;"  id="3rdRace">May &nbsp;&nbsp;5 - Points - All Classes</p>
-              <p style="margin-left: 31px;" id="4thRace">12 - Points - All Classes</p>
-              <p style="margin-left: -1px;" id="5thRace">June &nbsp;&nbsp;2 - Points - All Classes</p>
-              <p style="margin-left: 31px;" id="6thRace">&nbsp;&nbsp;9 - Points - All Classes</p>
-              <p style="margin-left: 4px;"  id="7thRace">July 14 - Points - All Classes</p>
-              <p style="margin-left: 31px;" id="8thRace">28 - SHOOTOUT</p>
-              <p style="margin-left: 4px;"  id="9thRace">Aug 18 - Points - All Classes</p>
-              <p style="margin-left: 0px;"  id="10thRace">Sept &nbsp;&nbsp;8 - Points - All Classes</p>
-              <p class="cancelled" style="margin-left: 30px;" id="11thRace">22 - Points - All Classes</p>
-              <p class="new" style="margin-left: 6px;" id="12thRace">Oct &nbsp;&nbsp;5 - Points - All Classes - Saturday</p>
+              <p style="margin-left: 7px;"  id="1stRace">Apr &nbsp;&nbsp;5 - Points - All Classes</p>
+              <p style="margin-left: 31px;" id="2ndRace">19 - Points - All Classes</p>
+              <p style="margin-left: 3px;"  id="3rdRace">May &nbsp;&nbsp;3 - Points - All Classes</p>
+              <p style="margin-left: 31px;" id="4thRace">10 - Points - All Classes</p>
+              <p style="margin-left: -1px;" id="5thRace">June &nbsp;&nbsp;7 - Points - All Classes</p>
+              <p style="margin-left: 31px;" id="6thRace">28 - Points - All Classes</p>
+              <p style="margin-left: 4px;"  id="7thRace">July &nbsp;&nbsp;5 - Points - All Classes</p>
+              <p style="margin-left: 31px;" id="8thRace">26 - SHOOTOUT</p>
+              <p style="margin-left: 1px;"  id="9thRace">Aug &nbsp;16 - Points - All Classes</p>
+              <p style="margin-left: 31px;" id="10thRace">23 - Points - All Classes</p>
+              <p style="margin-left: -3px;" id="11thRace">Sept &nbsp;13 - Points - Championship Race</p>
               <!-- <p class="new" style="margin-left: 30px;" id="12thRace">30 - Championship Race</p> -->
               <!-- Classes .current .over .cancelled .new -->
             </div>
@@ -200,16 +199,18 @@
             Streetcar Shootout and Rain Dates are included.
           </p> -->
 
-        <!-- <h1>2019 Race Schedule</h1>
-        <p>The 2019 Race Schedule is here! check out the <a href="/Events.html">Events page</a> for details.</p> -->
+        <div id="content2">
+          <h1>2020 Race Schedule</h1>
+          <p>The 2020 Race Schedule is here! check out the <a href="/Events.html">Events page</a> for details.</p>
+        </div>
         
-        <div id="SilentAuctionEnd">
+        <!-- <div id="SilentAuctionEnd">
           <h1>SILENT AUCTION</h1>
           <p>Our Annual Silent Auction is fast approaching. It will be held at Ma Millers Pub (2903 Sooke Lake Road), Saturday, December 7th at 7pm. Fees are $5 for members and $10 for non-members.</p>
           <p>We are in need of donations that can be auctioned off at the event. Donated items are not limited to being new or car related. Anything would be greatly appreciated such as gift certificates, gift baskets, or merchandise in new condition for example. (Even a car part you ended up not needing that is in new condition counts.) Our club benefits from 100% of the proceeds which are used for things like track equipment upgrades, season start up fees, etc... With a little effort by us all we can make this a great and fun event with a lot of benefits for the club and our sport.</p>
           <p>Please contact Bill Jamieson 250-888-0053 or Tracy Barnes to arrange drop off or pick-up of your donations.</p>
           <p>Thank you for helping support the sport we all love.</p>
-        </div>
+        </div> -->
 
         <h1>We're Social</h1>
         <p>Drag Race Victoria is on <a href="https://www.facebook.com/groups/327092727329942/" target="_blank"> Facebook</a>, <a href="https://twitter.com/DragRaceVic">Twitter</a> and <a href="https://www.instagram.com/dragracevictoria/?hl=en">Instagram</a>!</p>  
